Chanages to prepare for pipeline

--- a/notebooks/newsapi_freitas.ipynb
+++ b/notebooks/newsapi_freitas.ipynb
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "02da096b",
+   "id": "f0a25a2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "78149d6b",
+   "id": "b0c33e3a",
    "metadata": {
     "collapsed": true
    },
@@ -443,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "b766ddc1",
+   "id": "9f7a5a4e",
    "metadata": {
     "collapsed": true
    },
@@ -515,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "3062131a",
+   "id": "e514a45f",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "9d00fb7f",
+   "id": "cb8a4a1d",
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 213,
-   "id": "de95f655",
+   "id": "04e0dfd0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": 214,
-   "id": "02263cb4",
+   "id": "9f76f9b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": 215,
-   "id": "ecd063f7",
+   "id": "a02e5fcc",
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +672,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "9ea4f891",
+   "id": "24c13211",
    "metadata": {
     "collapsed": true
    },
@@ -1046,7 +1046,7 @@
   {
    "cell_type": "code",
    "execution_count": 373,
-   "id": "800c4e8c",
+   "id": "245939a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1056,7 +1056,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "d1e9cb12",
+   "id": "221d755d",
    "metadata": {},
    "outputs": [
     {
@@ -1082,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": 216,
-   "id": "628af592",
+   "id": "cd94887f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1134,7 +1134,7 @@
   {
    "cell_type": "code",
    "execution_count": 217,
-   "id": "d081fa10",
+   "id": "844e194e",
    "metadata": {
     "collapsed": true
    },
@@ -1195,7 +1195,7 @@
   {
    "cell_type": "code",
    "execution_count": 199,
-   "id": "a04de9b4",
+   "id": "bbb628b4",
    "metadata": {},
    "outputs": [
     {
@@ -1218,7 +1218,7 @@
   {
    "cell_type": "code",
    "execution_count": 205,
-   "id": "f96a70fe",
+   "id": "bd02be99",
    "metadata": {
     "collapsed": true
    },
@@ -1269,7 +1269,7 @@
   {
    "cell_type": "code",
    "execution_count": 183,
-   "id": "d24db1e4",
+   "id": "b8a60490",
    "metadata": {
     "collapsed": true
    },
@@ -1372,7 +1372,7 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "id": "085dc352",
+   "id": "a4393581",
    "metadata": {
     "collapsed": true
    },
@@ -1650,7 +1650,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "b620ee9e",
+   "id": "fcab3e8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1660,7 +1660,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "id": "a0d5760d",
+   "id": "87d9ff88",
    "metadata": {
     "collapsed": true
    },
@@ -1938,7 +1938,7 @@
   {
    "cell_type": "code",
    "execution_count": 210,
-   "id": "b42dfd8a",
+   "id": "a03406fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1948,7 +1948,7 @@
   {
    "cell_type": "code",
    "execution_count": 211,
-   "id": "4ed619f0",
+   "id": "e1a1497d",
    "metadata": {
     "collapsed": true
    },
@@ -2051,7 +2051,7 @@
   {
    "cell_type": "code",
    "execution_count": 374,
-   "id": "6de11d38",
+   "id": "84161f2f",
    "metadata": {
     "collapsed": true
    },
@@ -2455,7 +2455,7 @@
   {
    "cell_type": "code",
    "execution_count": 179,
-   "id": "23469fae",
+   "id": "a097a480",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2508,7 +2508,7 @@
   {
    "cell_type": "code",
    "execution_count": 180,
-   "id": "69cef046",
+   "id": "db72d1c7",
    "metadata": {
     "collapsed": true
    },
@@ -2611,7 +2611,7 @@
   {
    "cell_type": "code",
    "execution_count": 350,
-   "id": "8fd66b65",
+   "id": "b68fd55f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2631,7 +2631,7 @@
   {
    "cell_type": "code",
    "execution_count": 351,
-   "id": "4ad76bea",
+   "id": "17535224",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2653,7 +2653,7 @@
   {
    "cell_type": "code",
    "execution_count": 352,
-   "id": "329d5c5a",
+   "id": "1ebff7dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2673,7 +2673,7 @@
   {
    "cell_type": "code",
    "execution_count": 353,
-   "id": "1efb670f",
+   "id": "3968049c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2695,7 +2695,7 @@
   {
    "cell_type": "code",
    "execution_count": 354,
-   "id": "9478e5ac",
+   "id": "f08f513b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2716,7 +2716,7 @@
   {
    "cell_type": "code",
    "execution_count": 355,
-   "id": "b39b9059",
+   "id": "2ad130d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2758,7 +2758,7 @@
   {
    "cell_type": "code",
    "execution_count": 356,
-   "id": "4850a316",
+   "id": "42942d70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2777,7 +2777,7 @@
   {
    "cell_type": "code",
    "execution_count": 357,
-   "id": "e75b1f6e",
+   "id": "34fd2fb4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2798,7 +2798,7 @@
   {
    "cell_type": "code",
    "execution_count": 358,
-   "id": "79591482",
+   "id": "122ea579",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2820,7 +2820,7 @@
   {
    "cell_type": "code",
    "execution_count": 372,
-   "id": "8150419e",
+   "id": "a9dd5591",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2855,7 +2855,7 @@
   {
    "cell_type": "code",
    "execution_count": 360,
-   "id": "97d96113",
+   "id": "8fc6e427",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2884,7 +2884,7 @@
   {
    "cell_type": "code",
    "execution_count": 361,
-   "id": "78a04413",
+   "id": "1bd71fb4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2945,7 +2945,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d120ed8",
+   "id": "3efaeb95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2981,7 +2981,7 @@
   {
    "cell_type": "code",
    "execution_count": 426,
-   "id": "feef4850",
+   "id": "e62cf625",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3092,7 +3092,7 @@
   {
    "cell_type": "code",
    "execution_count": 427,
-   "id": "9ca6f06e",
+   "id": "2a0238a9",
    "metadata": {
     "scrolled": true
    },
@@ -3104,7 +3104,7 @@
   {
    "cell_type": "code",
    "execution_count": 428,
-   "id": "651fe755",
+   "id": "3955b8d6",
    "metadata": {},
    "outputs": [
     {
@@ -3371,7 +3371,7 @@
   {
    "cell_type": "code",
    "execution_count": 432,
-   "id": "a3e0875d",
+   "id": "53f269b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3392,7 +3392,7 @@
   {
    "cell_type": "code",
    "execution_count": 430,
-   "id": "0b996d60",
+   "id": "e085398a",
    "metadata": {},
    "outputs": [
     {
@@ -3440,7 +3440,7 @@
   {
    "cell_type": "code",
    "execution_count": 385,
-   "id": "3f2770af",
+   "id": "7f53513a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3450,7 +3450,7 @@
   {
    "cell_type": "code",
    "execution_count": 431,
-   "id": "d3467916",
+   "id": "e1cf7c6d",
    "metadata": {},
    "outputs": [
     {
@@ -3642,8 +3642,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 435,
+   "id": "a085b4e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'data_prep' from 'big_picture.pre_processor' (/Users/josefreitas/.pyenv/versions/3.8.6/envs/lewagon/lib/python3.8/site-packages/big_picture/pre_processor.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-435-51ead66fcf26>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mbig_picture\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpre_processor\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdata_prep\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'data_prep' from 'big_picture.pre_processor' (/Users/josefreitas/.pyenv/versions/3.8.6/envs/lewagon/lib/python3.8/site-packages/big_picture/pre_processor.py)"
+     ]
+    }
+   ],
+   "source": [
+    "from big_picture.pre_processor import data_prep"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "2dc3175b",
+   "id": "24ae556f",
    "metadata": {},
    "outputs": [],
    "source": []
