--- a/notebooks/newsapi_freitas.ipynb
+++ b/notebooks/newsapi_freitas.ipynb
@@ -3642,7 +3642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "a085b4e7",
    "metadata": {},
    "outputs": [],
@@ -3654,7 +3654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "add1402b",
    "metadata": {},
    "outputs": [],
@@ -3699,7 +3699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "6973bc3d",
    "metadata": {},
    "outputs": [],
@@ -3709,20 +3709,370 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "f4a68683",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "pre_process() got an unexpected keyword argument 'source'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-18-a80196394ba9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpre_process\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msource\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'web'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: pre_process() got an unexpected keyword argument 'source'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>category</th>\n",
+       "      <th>headline</th>\n",
+       "      <th>authors</th>\n",
+       "      <th>link</th>\n",
+       "      <th>short_description</th>\n",
+       "      <th>date</th>\n",
+       "      <th>content</th>\n",
+       "      <th>pre_processed_text</th>\n",
+       "      <th>minor_preprocessing</th>\n",
+       "      <th>label</th>\n",
+       "      <th>nrs_count</th>\n",
+       "      <th>questions</th>\n",
+       "      <th>exclamations</th>\n",
+       "      <th>irony</th>\n",
+       "      <th>vocab_richness</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CRIME</td>\n",
+       "      <td>There Were 2 Mass Shootings In Texas Last Week...</td>\n",
+       "      <td>Melissa Jeltsen</td>\n",
+       "      <td>https://www.huffingtonpost.com/entry/texas-ama...</td>\n",
+       "      <td>She left her husband. He killed their children...</td>\n",
+       "      <td>2018-05-26</td>\n",
+       "      <td>DENTON, Texas ― Amanda Painter sat at the kit...</td>\n",
+       "      <td>[There, Were, Mass, Shootings, In, Texas, Last...</td>\n",
+       "      <td>There Were 2 Mass Shootings In Texas Last Week...</td>\n",
+       "      <td>Crime</td>\n",
+       "      <td>37</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.287574</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ENTERTAINMENT</td>\n",
+       "      <td>Will Smith Joins Diplo And Nicky Jam For The 2...</td>\n",
+       "      <td>Andy McDonald</td>\n",
+       "      <td>https://www.huffingtonpost.com/entry/will-smit...</td>\n",
+       "      <td>Of course it has a song.</td>\n",
+       "      <td>2018-05-26</td>\n",
+       "      <td>The 2018 FIFA World Cup starts June 14 in Rus...</td>\n",
+       "      <td>[Will, Smith, Joins, Diplo, And, Nicky, Jam, F...</td>\n",
+       "      <td>Will Smith Joins Diplo And Nicky Jam For The 2...</td>\n",
+       "      <td>Entertainment</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.641509</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ENTERTAINMENT</td>\n",
+       "      <td>Hugh Grant Marries For The First Time At Age 57</td>\n",
+       "      <td>Ron Dicker</td>\n",
+       "      <td>https://www.huffingtonpost.com/entry/hugh-gran...</td>\n",
+       "      <td>The actor and his longtime girlfriend Anna Ebe...</td>\n",
+       "      <td>2018-05-26</td>\n",
+       "      <td>Love actually turned to matrimony for Hugh Gr...</td>\n",
+       "      <td>[Hugh, Grant, Marries, For, The, First, Time, ...</td>\n",
+       "      <td>Hugh Grant Marries For The First Time At Age 5...</td>\n",
+       "      <td>Entertainment</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.608059</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ENTERTAINMENT</td>\n",
+       "      <td>Jim Carrey Blasts 'Castrato' Adam Schiff And D...</td>\n",
+       "      <td>Ron Dicker</td>\n",
+       "      <td>https://www.huffingtonpost.com/entry/jim-carre...</td>\n",
+       "      <td>The actor gives Dems an ass-kicking for not fi...</td>\n",
+       "      <td>2018-05-26</td>\n",
+       "      <td>Rep. Adam Schiff (D-Calif.) and fellow Democr...</td>\n",
+       "      <td>[Jim, Carrey, Blasts, Castrato, Adam, Schiff, ...</td>\n",
+       "      <td>Jim Carrey Blasts 'Castrato' Adam Schiff And D...</td>\n",
+       "      <td>Entertainment</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.554455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ENTERTAINMENT</td>\n",
+       "      <td>Julianna Margulies Uses Donald Trump Poop Bags...</td>\n",
+       "      <td>Ron Dicker</td>\n",
+       "      <td>https://www.huffingtonpost.com/entry/julianna-...</td>\n",
+       "      <td>The \"Dietland\" actress said using the bags is ...</td>\n",
+       "      <td>2018-05-26</td>\n",
+       "      <td>Actress Julianna Margulies unleashed her funn...</td>\n",
+       "      <td>[Julianna, Margulies, Uses, Donald, Trump, Poo...</td>\n",
+       "      <td>Julianna Margulies Uses Donald Trump Poop Bags...</td>\n",
+       "      <td>Entertainment</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.631016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>193</th>\n",
+       "      <td>POLITICS</td>\n",
+       "      <td>Sarah Sanders: It 'Bothers Me' Being Called A ...</td>\n",
+       "      <td>Jennifer Bendery</td>\n",
+       "      <td>https://www.huffingtonpost.com/entry/sarah-san...</td>\n",
+       "      <td>Except the White House press secretary gives f...</td>\n",
+       "      <td>2018-05-23</td>\n",
+       "      <td>WASHINGTON ― White House press secretary Sara...</td>\n",
+       "      <td>[Sarah, Sanders, It, Bothers, Me, Being, Calle...</td>\n",
+       "      <td>Sarah Sanders: It 'Bothers Me' Being Called A ...</td>\n",
+       "      <td>Politics</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.471850</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>194</th>\n",
+       "      <td>POLITICS</td>\n",
+       "      <td>Trump Blocking People On Twitter Is Unconstitu...</td>\n",
+       "      <td>Lydia O'Connor and Ryan J. Reilly</td>\n",
+       "      <td>https://www.huffingtonpost.com/entry/trump-twi...</td>\n",
+       "      <td>The president's Twitter feed is a \"public foru...</td>\n",
+       "      <td>2018-05-23</td>\n",
+       "      <td>A federal judge ruled Wednesday that Presiden...</td>\n",
+       "      <td>[Trump, Blocking, People, On, Twitter, Is, Unc...</td>\n",
+       "      <td>Trump Blocking People On Twitter Is Unconstitu...</td>\n",
+       "      <td>Politics</td>\n",
+       "      <td>16</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.486226</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>195</th>\n",
+       "      <td>POLITICS</td>\n",
+       "      <td>A Mostly Non-Christian Militia Won 2 Of Iraqi ...</td>\n",
+       "      <td>Akbar Shahid Ahmed</td>\n",
+       "      <td>https://www.huffingtonpost.com/entry/iraq-parl...</td>\n",
+       "      <td>The Babylon Brigade is led by a Christian but ...</td>\n",
+       "      <td>2018-05-23</td>\n",
+       "      <td>WASHINGTON ― A mostly non-Christian militia l...</td>\n",
+       "      <td>[A, Mostly, NonChristian, Militia, Won, Of, Ir...</td>\n",
+       "      <td>A Mostly Non-Christian Militia Won 2 Of Iraqi ...</td>\n",
+       "      <td>Politics</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.440430</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>196</th>\n",
+       "      <td>POLITICS</td>\n",
+       "      <td>Tulsi Gabbard's Syria Views Cost Her Support O...</td>\n",
+       "      <td>Amanda Terkel</td>\n",
+       "      <td>https://www.huffingtonpost.com/entry/tulsi-gab...</td>\n",
+       "      <td>The state's fourth-largest union had backed th...</td>\n",
+       "      <td>2018-05-23</td>\n",
+       "      <td>Hawaii’s fourth-largest union announced Tuesd...</td>\n",
+       "      <td>[Tulsi, Gabbards, Syria, Views, Cost, Her, Sup...</td>\n",
+       "      <td>Tulsi Gabbard's Syria Views Cost Her Support O...</td>\n",
+       "      <td>Politics</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.443765</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>197</th>\n",
+       "      <td>POLITICS</td>\n",
+       "      <td>Jared Kushner Received His Security Clearance:...</td>\n",
+       "      <td>Marina Fang</td>\n",
+       "      <td>https://www.huffingtonpost.com/entry/jared-kus...</td>\n",
+       "      <td>The president's son-in-law had been using a te...</td>\n",
+       "      <td>2018-05-23</td>\n",
+       "      <td>Jared Kushner, President Donald Trump’s son-i...</td>\n",
+       "      <td>[Jared, Kushner, Received, His, Security, Clea...</td>\n",
+       "      <td>Jared Kushner Received His Security Clearance:...</td>\n",
+       "      <td>Politics</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.554455</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>198 rows × 15 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          category                                           headline  \\\n",
+       "0            CRIME  There Were 2 Mass Shootings In Texas Last Week...   \n",
+       "1    ENTERTAINMENT  Will Smith Joins Diplo And Nicky Jam For The 2...   \n",
+       "2    ENTERTAINMENT    Hugh Grant Marries For The First Time At Age 57   \n",
+       "3    ENTERTAINMENT  Jim Carrey Blasts 'Castrato' Adam Schiff And D...   \n",
+       "4    ENTERTAINMENT  Julianna Margulies Uses Donald Trump Poop Bags...   \n",
+       "..             ...                                                ...   \n",
+       "193       POLITICS  Sarah Sanders: It 'Bothers Me' Being Called A ...   \n",
+       "194       POLITICS  Trump Blocking People On Twitter Is Unconstitu...   \n",
+       "195       POLITICS  A Mostly Non-Christian Militia Won 2 Of Iraqi ...   \n",
+       "196       POLITICS  Tulsi Gabbard's Syria Views Cost Her Support O...   \n",
+       "197       POLITICS  Jared Kushner Received His Security Clearance:...   \n",
+       "\n",
+       "                               authors  \\\n",
+       "0                      Melissa Jeltsen   \n",
+       "1                        Andy McDonald   \n",
+       "2                           Ron Dicker   \n",
+       "3                           Ron Dicker   \n",
+       "4                           Ron Dicker   \n",
+       "..                                 ...   \n",
+       "193                   Jennifer Bendery   \n",
+       "194  Lydia O'Connor and Ryan J. Reilly   \n",
+       "195                 Akbar Shahid Ahmed   \n",
+       "196                      Amanda Terkel   \n",
+       "197                        Marina Fang   \n",
+       "\n",
+       "                                                  link  \\\n",
+       "0    https://www.huffingtonpost.com/entry/texas-ama...   \n",
+       "1    https://www.huffingtonpost.com/entry/will-smit...   \n",
+       "2    https://www.huffingtonpost.com/entry/hugh-gran...   \n",
+       "3    https://www.huffingtonpost.com/entry/jim-carre...   \n",
+       "4    https://www.huffingtonpost.com/entry/julianna-...   \n",
+       "..                                                 ...   \n",
+       "193  https://www.huffingtonpost.com/entry/sarah-san...   \n",
+       "194  https://www.huffingtonpost.com/entry/trump-twi...   \n",
+       "195  https://www.huffingtonpost.com/entry/iraq-parl...   \n",
+       "196  https://www.huffingtonpost.com/entry/tulsi-gab...   \n",
+       "197  https://www.huffingtonpost.com/entry/jared-kus...   \n",
+       "\n",
+       "                                     short_description        date  \\\n",
+       "0    She left her husband. He killed their children...  2018-05-26   \n",
+       "1                             Of course it has a song.  2018-05-26   \n",
+       "2    The actor and his longtime girlfriend Anna Ebe...  2018-05-26   \n",
+       "3    The actor gives Dems an ass-kicking for not fi...  2018-05-26   \n",
+       "4    The \"Dietland\" actress said using the bags is ...  2018-05-26   \n",
+       "..                                                 ...         ...   \n",
+       "193  Except the White House press secretary gives f...  2018-05-23   \n",
+       "194  The president's Twitter feed is a \"public foru...  2018-05-23   \n",
+       "195  The Babylon Brigade is led by a Christian but ...  2018-05-23   \n",
+       "196  The state's fourth-largest union had backed th...  2018-05-23   \n",
+       "197  The president's son-in-law had been using a te...  2018-05-23   \n",
+       "\n",
+       "                                               content  \\\n",
+       "0     DENTON, Texas ― Amanda Painter sat at the kit...   \n",
+       "1     The 2018 FIFA World Cup starts June 14 in Rus...   \n",
+       "2     Love actually turned to matrimony for Hugh Gr...   \n",
+       "3     Rep. Adam Schiff (D-Calif.) and fellow Democr...   \n",
+       "4     Actress Julianna Margulies unleashed her funn...   \n",
+       "..                                                 ...   \n",
+       "193   WASHINGTON ― White House press secretary Sara...   \n",
+       "194   A federal judge ruled Wednesday that Presiden...   \n",
+       "195   WASHINGTON ― A mostly non-Christian militia l...   \n",
+       "196   Hawaii’s fourth-largest union announced Tuesd...   \n",
+       "197   Jared Kushner, President Donald Trump’s son-i...   \n",
+       "\n",
+       "                                    pre_processed_text  \\\n",
+       "0    [There, Were, Mass, Shootings, In, Texas, Last...   \n",
+       "1    [Will, Smith, Joins, Diplo, And, Nicky, Jam, F...   \n",
+       "2    [Hugh, Grant, Marries, For, The, First, Time, ...   \n",
+       "3    [Jim, Carrey, Blasts, Castrato, Adam, Schiff, ...   \n",
+       "4    [Julianna, Margulies, Uses, Donald, Trump, Poo...   \n",
+       "..                                                 ...   \n",
+       "193  [Sarah, Sanders, It, Bothers, Me, Being, Calle...   \n",
+       "194  [Trump, Blocking, People, On, Twitter, Is, Unc...   \n",
+       "195  [A, Mostly, NonChristian, Militia, Won, Of, Ir...   \n",
+       "196  [Tulsi, Gabbards, Syria, Views, Cost, Her, Sup...   \n",
+       "197  [Jared, Kushner, Received, His, Security, Clea...   \n",
+       "\n",
+       "                                   minor_preprocessing          label  \\\n",
+       "0    There Were 2 Mass Shootings In Texas Last Week...          Crime   \n",
+       "1    Will Smith Joins Diplo And Nicky Jam For The 2...  Entertainment   \n",
+       "2    Hugh Grant Marries For The First Time At Age 5...  Entertainment   \n",
+       "3    Jim Carrey Blasts 'Castrato' Adam Schiff And D...  Entertainment   \n",
+       "4    Julianna Margulies Uses Donald Trump Poop Bags...  Entertainment   \n",
+       "..                                                 ...            ...   \n",
+       "193  Sarah Sanders: It 'Bothers Me' Being Called A ...       Politics   \n",
+       "194  Trump Blocking People On Twitter Is Unconstitu...       Politics   \n",
+       "195  A Mostly Non-Christian Militia Won 2 Of Iraqi ...       Politics   \n",
+       "196  Tulsi Gabbard's Syria Views Cost Her Support O...       Politics   \n",
+       "197  Jared Kushner Received His Security Clearance:...       Politics   \n",
+       "\n",
+       "     nrs_count  questions  exclamations  irony  vocab_richness  \n",
+       "0           37          4             4      0        0.287574  \n",
+       "1            5          0             1      0        0.641509  \n",
+       "2            7          0             1      0        0.608059  \n",
+       "3            2          0             7      0        0.554455  \n",
+       "4            0          0             3      0        0.631016  \n",
+       "..         ...        ...           ...    ...             ...  \n",
+       "193          8          2             2      0        0.471850  \n",
+       "194         16          1             3      0        0.486226  \n",
+       "195          8          0             1      0        0.440430  \n",
+       "196          6          0             1      0        0.443765  \n",
+       "197          2          0             1      0        0.554455  \n",
+       "\n",
+       "[198 rows x 15 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
